<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiekoActivity"
    android:background="@drawable/pizza">

    <TextView
        android:id="@+id/DiekoTextView01"
        style="@style/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="48dp"
        android:text="@string/choose_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        android:layout_marginTop="164dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <RadioButton
            android:id="@+id/dieko_pp"
            style="@style/regular_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizza_pizza"
            />

        <RadioButton
            android:id="@+id/dieko_dominos"
            style="@style/regular_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dominos"
            />

        <RadioButton
            android:id="@+id/dieko_phut"
            style="@style/regular_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizza_hut"
            />
    </RadioGroup>

    <Button
        android:id="@+id/diekonext1"
        android:layout_width="118dp"
        android:layout_height="71dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="240dp"
        android:text="@string/next_btn_mess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    android:onClick="onRadioButtonClicked"-->
</androidx.constraintlayout.widget.ConstraintLayout>